[signUp] response for button-click

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -39,6 +39,7 @@
          
         <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">Sign up</button>
       </form>
+        <label id="result"><label> 
       </div>
  
        
