--- a/views/randomDesk.handlebars
+++ b/views/randomDesk.handlebars
@@ -7,8 +7,8 @@
   <link href="/styles/bootstrap.min.css" rel="stylesheet">
   <link href="/styles/jumbotron-narrow.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/styles/deskPro.css">
-  <link href="/styles/userhome.css" rel="stylesheet">
-
+  <link href="../static/css/signup.css" rel="stylesheet">
+  <!--<link href ="/styles/mainCustom.css" rel="stylesheet"> -->
 
 </head>
 
@@ -18,8 +18,9 @@
         <div class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="/myComments">Comment</a></li>
-                    <li role="presentation"><a href="/randomDesk">Random</a></li>
+                    <li role="presentation"><a href="/myPage">My Desks</a></li>
+                    <!--<li role="presentation"><a href="/logout">Logout</a> -->
+                    </li>
                 </ul>
             </nav>
             <h3 class="text-muted" style="text-decoration:none"><a href="/" style=" text-decoration:none">hiDEsk</a></h3>
@@ -27,7 +28,7 @@
 
         <!--  <div class="row marketing"></div> -->
           <div class="col-lg-6">
-              <h4 align="center">Welcome {{{user_name}}}</h4>
+              <h4 style="visibility : hidden" 여백의 미 </h4>
               <!--<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
               -->
           </div>
@@ -55,14 +56,9 @@
               <div id="nick-name">{{{nickName}}}</div>
               -->
           </div>
-          <div class ="col-lg-6">
+          <div class = "col-lg-6">
             <h4 style="visibility : hidden" 여백의 미 </h4>
           </div>
-          <div class ="btn-new-desk-post">
-            <div><a href="/postNewDesk">New</a></div>
-
-          </div>
-
 
 
         <footer class="footer">
