--- a/views/indexDesk.handlebars
+++ b/views/indexDesk.handlebars
@@ -27,11 +27,13 @@
             <h3 class="text-muted" ><a href="/" style=" text-decoration:none">hiDEsk</a></h3>
         </div>
       <!--  <div class="row marketing"></div> -->
-            <div class="col-lg-6">
-                <h4 align="center">책상에서 묻어나는<br />당신의 모습이 좋아요</h4>
-                <!--<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-                -->
-            </div>
+        <div class="col-lg-6">
+            <h4 align="center"><span style="display:inline-block;">넥스트 사람들의</span> <span style="display:inline-block;">책상찾기 놀이 SNS</span></h4>
+            <!--<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+            -->
+        </div>
+
+
 
         <div class="img-container">
           <!--
