add login status to index page
add login_status in indexJesk.handlebars

--- a/views/indexDesk.handlebars
+++ b/views/indexDesk.handlebars
@@ -62,7 +62,7 @@
         <footer class="footer">
             <p>&copy; Kate 2016</p>
         </footer>
-
+        {{{login_status}}}
     </div>
 </body>
 
