--- a/views/randomDesk.handlebars
+++ b/views/randomDesk.handlebars
@@ -19,8 +19,7 @@
             <nav>
                 <ul class="nav nav-pills pull-right">
                     <li role="presentation"><a href="/myPage">My Desks</a></li>
-                    <!--<li role="presentation"><a href="/logout">Logout</a> -->
-                    </li>
+                    <li role="presentation"><a href="/logout">Logout</a></li>
                 </ul>
             </nav>
             <h3 class="text-muted" style="text-decoration:none"><a href="/" style=" text-decoration:none">hiDEsk</a></h3>
@@ -64,7 +63,7 @@
         <footer class="footer">
             <p>&copy; Kate 2016</p>
         </footer>
-
+        {{{login_status}}}
     </div>
 </body>
 </html>
