--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -34,6 +34,11 @@
 
         <button id="btnSignIn" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
+      <div>
+        <form class="form-signin" action="/auth/facebook" method="GET">
+          <button id="btnSignIn" class="btn btn-lg btn-primary btn-block" type="submit" value="fb">by facebook </button>
+        </form>
+      </div>
       </div>
 
 
