--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -22,7 +22,7 @@
             <li role="presentation" class="active"><a href="#">Sign Up</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted"<a href="/" style=" text-decoration:none">hiDEsk</a></h3>
+        <h3 class="text-muted"><a href="/" style="text-decoration:none">hiDEsk</a></h3>
       </div>
 
       <div class="jumbotron">
