making userlogin process

--- a/views/indexDesk.handlebars
+++ b/views/indexDesk.handlebars
@@ -20,7 +20,7 @@
                   </li> -->
                   {{#if login_status}}
                     <li role="presentation"><a href="/myPage">My Desks</a></li>
-                    <li role="presentation"><a href="/logout">Logout</a></li>
+                    <li role="presentation"><a href="/log/out">Logout</a></li>
                   {{else}}
                     <li role="presentation"><a href="showSignin">Sign In</a>
                     </li>
