--- a/views/randomDesk.handlebars
+++ b/views/randomDesk.handlebars
@@ -19,7 +19,7 @@
             <nav>
                 <ul class="nav nav-pills pull-right">
                     <li role="presentation"><a href="/myPage">My Desks</a></li>
-                    <li role="presentation"><a href="/logout">Logout</a></li>
+                    <li role="presentation"><a href="/log/out">Logout</a></li>
                 </ul>
             </nav>
             <h3 class="text-muted" style="text-decoration:none"><a href="/" style=" text-decoration:none">hiDEsk</a></h3>
